--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0"?>
 <project name="webutils" default="info">
-    <property name="src" location="src"/>
-    <property name="build" location="build"/>
-    <property name="dist" location="dist"/>
-    <property name="junit.libs" location="lib/test"/>
-    <property name="test" location="test"/>
-    <property name="test.build" location="test-build/classes"/>
-    <property name="test.output" location="test-build/output"/>
-    <property name="test.html" location="test-build/html"/>
+    <property file="build.properties"/>
 
     <path id="junit.libs.path">
         <fileset dir="${junit.libs}"/>
@@ -59,7 +52,12 @@
         </junitreport>
     </target>
 
-    <target name="dist" depends="test">
+    <target name="document" depends="compile">
+        <mkdir dir="${dist}/docs"/>
+        <javadoc sourcepath="${src}" destdir="${dist}/docs"/>
+    </target>
+
+    <target name="dist" depends="test,document">
         <mkdir dir="${dist}/lib"/>
         <jar jarfile="${dist}/lib/WebUtils-${DSTAMP}.jar" basedir="${build}"/>
     </target>
