Restructured build directory

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 src = src
-build = build
-dist = dist
+build = build/classes
+dist = build/dist
+docs = build/docs
 junit.libs = lib/test
 test = test
 test.build = test-build/classes
